Update JSON export filename format
Change the download filename format for JSON exports.

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
             a.href = url;
-            a.download = `${browser}_export_${new Date().getTime()}.json`;
+            a.download = `${browser}_export.json`;
             document.body.appendChild(a);
             a.click();
             document.body.removeChild(a);
