--- a/index.html
+++ b/index.html
@@ -301,10 +301,12 @@
         function getExportData() {
             const deprecated = fullData.filter(d => d.status === 'empty');
             const browserNameAttr = fullData.find(d => d.key === 'BROWSER_NAME');
+            const browserVersionAttr = fullData.find(d => d.key === 'BROWSER_VERSION');
             return {
                 timestamp: new Date().toISOString(),
                 browser: navigator.userAgent,
                 browserName: browserNameAttr ? browserNameAttr.value : 'unknown',
+                browserVersion: browserVersionAttr ? browserVersionAttr.value : 'unknown',
                 deprecatedAttributesCount: deprecated.length,
                 deprecatedAttributes: deprecated.map(d => ({ key: d.key, value: d.value }))
             };
